[package]
name = "nordc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.14.0"
clap = { version = "4.4.12", features = ["derive"] }
wat = "1.202.0"
wasmtime = "19.0.0"
wasm-opt = "0.116.1"
tempfile = "3.10.1"
wasmprinter = "0.202.0"
walrus = "0.20.3"

[build-dependencies]
lalrpop = "0.20.0"
