[package]
name = "nordc"
version = "0.1.0"
edition = "2021"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
logos = "0.14.0"
clap = { version = "4.4.12", features = ["derive"] }
wat = "1.202.0"
wasmtime = "19.0.2"
wasm-opt = "0.116.1"
tempfile = "3.10.1"
wasmprinter = "0.202.0"
walrus = "0.20.3"
eyre = "0.6.12"
color-eyre = "0.6.3"
reedline = "0.31.0"

[build-dependencies]
lalrpop = "0.20.0"
